crates/svm-sdk-tests/tests/endpoint/endpoint_and_fundable_attrs_wrong_order.stderr
error: `#[fundable(..)]` should be placed above `#[endpoint]`
 --> $DIR/endpoint_and_fundable_attrs_wrong_order.rs:3:1
  |
3 | #[app]
  | ^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
