crates/svm-sdk-tests/tests/endpoint/endpoint_and_fundable_attrs_wrong_order.rs
use svm_sdk::app;

#[app]
mod App {
    #[ctor]
    #[fundable(deny)]
    fn init() {}
}

fn main() {}
